# dact-pipeline

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  pyproject.toml
dact/: __main__.py  __version__.py  data_providers.py  dependency_resolver.py  executor.py  inspector.py  logger.py  main.py  models.py  pytest_plugin.py  runner.py  scenario_loader.py  tool_loader.py  tool_registry.py  validation_engine.py  yaml_converter.py
dact-vscode-extension/: README.md  install.sh  language-configuration.json  package-lock.json  package.json  snippets.json  tsconfig.json
docs/: Makefile  README.md  build_docs.py  conf.py  e2e_testing_guide.md  getting_started.md  index.md  make.bat  requirements.txt
examples/: complete_e2e_example.md
scenarios/: demo.scenario.yml  dependency_test.scenario.yml  e2e_onnx_to_atc.scenario.yml
test_tools/: mock_ai_json_operator.py  mock_atc.py
tests/: test_case_system_integration.py  test_chinese_logging.py  test_data_providers_simple.py  test_dependency_resolver.py  test_e2e_integration.py  test_enhanced_case_system.py  test_enhanced_data_driven.py  test_enhanced_executor.py  test_enhanced_scenario_system.py  test_enhanced_tool_system.py  test_enhanced_validation_system.py  test_execution_result_management.py  test_executor.py  test_jinja2_rendering.py  test_models.py  test_parameter_override.py  test_project_setup.py  test_scenario_loader.py  test_step_parameter_passing.py  test_tool_loader.py  test_tool_registry.py  test_validation_simple.py
tools/: ai-json-operator.tool.yml  atc.tool.yml  create_file.tool.yml  demo.tool.yml  (+2 more)
(+34 files in other folders)
